# 3D-model

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  README.md  package.json
.github/workflows/: ci.yml
_Context/: 03_AGENT_PLAN.md  SKILLS_INSTALL.md
apps/api/: Dockerfile  package.json  pyproject.toml
apps/api/app/: main.py
apps/api/app/contexts/catalog/domain/: product.py
apps/api/app/contexts/catalog/infrastructure/: embeddings.py  models.py  repository.py  seed.py
apps/api/app/contexts/identity/application/: service.py  tokens.py
apps/api/app/contexts/identity/domain/: user.py
apps/api/app/contexts/identity/infrastructure/: models.py
apps/api/app/contexts/identity/interfaces/: router.py
apps/api/app/contexts/projects/interfaces/: dto.py  router.py
apps/api/app/contexts/scene/application/: composer.py  edit_reducer.py
apps/api/app/contexts/scene/domain/: scene_graph.py
apps/api/app/contexts/style_profile/application/: survey.py
apps/api/app/contexts/style_profile/domain/: profile.py
apps/api/app/contexts/style_profile/infrastructure/: models.py  repository.py
apps/api/app/core/: config.py  deps.py  logging.py
apps/api/app/db/: base.py  session.py
apps/api/tests/: conftest.py  test_demo_flow.py  test_embeddings.py  test_recompose_endpoint.py
apps/web/: tsconfig.json  vite.config.ts
apps/web/e2e/: demo-flow.spec.ts
apps/web/src/: App.tsx  index.css
apps/web/src/app/: AppShell.tsx  RequireAuth.tsx
apps/web/src/shared/: api.ts  types.ts
apps/web/src/store/: langStore.ts
docs/: ERROR_LOG.md
infra/: docker-compose.yml
(+16 files in other folders)
