[project]
name = "dormvibe-api"
version = "0.0.0"
description = "DormVibe FastAPI backend"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "sqlalchemy>=2.0",
  "httpx>=0.28",
  "argon2-cffi>=23.1",
  "python-json-logger>=2.0",
  "pyyaml>=6.0",
  "pyjwt>=2.9",
  "email-validator>=2.2",
  "psycopg[binary]>=3.2",
  "pgvector>=0.3.6",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "mypy>=1.13",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
strict = true
python_version = "3.12"
